[gd_scene load_steps=9 format=3 uid="uid://cenw2oo0yufut"]

[ext_resource type="Script" path="res://ui/main_menu_screen.gd" id="1_54hsk"]
[ext_resource type="Texture2D" uid="uid://ejnya4wmhdd2" path="res://ui/theme/environment-preview.png" id="1_oko00"]
[ext_resource type="Theme" uid="uid://baugwm03f0fmm" path="res://ui/theme/game_theme.tres" id="2_se36s"]
[ext_resource type="Texture2D" uid="uid://siih3wstd3rd" path="res://ui/theme/player-run-4.png" id="3_nk2ob"]
[ext_resource type="Texture2D" uid="uid://daky26l3wtoew" path="res://ui/theme/jumper-idle-4.png" id="4_a2vja"]
[ext_resource type="Texture2D" uid="uid://ckvy3blgxamu3" path="res://ui/theme/octopus-4.png" id="5_0yx48"]
[ext_resource type="FontFile" uid="uid://bf8jerclngpql" path="res://ui/theme/Cyborg Punk.ttf" id="7_wj61t"]

[sub_resource type="Theme" id="Theme_oao5o"]

[node name="MainMenuScreen" type="CanvasLayer"]
script = ExtResource("1_54hsk")

[node name="bg" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -77.0
offset_right = 526.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_oko00")

[node name="MarginContainer" type="MarginContainer" parent="."]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_se36s")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "PLAY
"

[node name="SettingsButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SETTINGS"

[node name="ControlsButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Controls"

[node name="ExitButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "EXIT"

[node name="Player-run-4" type="Sprite2D" parent="."]
position = Vector2(306, 219)
scale = Vector2(1.24375, 1.24375)
texture = ExtResource("3_nk2ob")
flip_h = true

[node name="Jumper-idle-4" type="Sprite2D" parent="."]
position = Vector2(40, 226)
texture = ExtResource("4_a2vja")

[node name="Octopus-4" type="Sprite2D" parent="."]
position = Vector2(221, 38)
texture = ExtResource("5_0yx48")

[node name="name" type="Label" parent="."]
offset_left = 125.0
offset_top = 20.0
offset_right = 565.0
offset_bottom = 107.0
scale = Vector2(1.00393, 1.02765)
theme = SubResource("Theme_oao5o")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.309804, 0.0470588, 0.466667, 1)
theme_override_colors/font_outline_color = Color(0.309804, 0.0470588, 0.466667, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("7_wj61t")
theme_override_font_sizes/font_size = 30
text = "CHONOBOT"

[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
